<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:id="@+id/linearLayout">

    <TextView
        android:id="@+id/month"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/jan"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_weight="3"/>

    <EditText
        android:id="@+id/opBal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/op_bal"
        android:gravity="center"
        android:inputType="number"
        android:layout_weight="2"/>

    <EditText
        android:id="@+id/cloBal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/clo_bal"
        android:gravity="center"
        android:inputType="number"
        android:layout_weight="1"/>

    <TextView
        android:id="@+id/amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/amount"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_weight="2"/>

    <TextView
        android:id="@+id/sales"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/sales"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_weight="1"/>

    <TextView
        android:id="@+id/total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/total"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_weight="1"/>

</LinearLayout>