<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize"
        android:text="@string/balance_sheet"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="20sp"
        android:gravity="center"/>

    <LinearLayout
        android:id="@+id/sheetHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolBar"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/month_Head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/month_head"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/head_OpBal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opening_balance"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_weight="2"/>

        <TextView
            android:id="@+id/head_CloBal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/closing_balance"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_weight="2"/>

        <TextView
            android:id="@+id/head_amt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amount_head"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/head_sales"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sales_head"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/headTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_head"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_weight="1"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_below="@+id/sheetHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:listitem="@layout/recyclerview_item"/>

</RelativeLayout>